# advanced_numerical_computing

./: CMakeLists.txt
chap02/: CMakeLists.txt  exercises.cxx
chap02/exercises/: 01.c
mumps_algo/: CMakeLists.txt
mumps_algo/include/: Doolittle.h  Factorization.h
mumps_algo/src/: Doolittle.cpp  Factorization.cpp
mumps_algo/test/: Doolittle.cpp  LU_Factorization.cpp
